# sonicticker

./: .gitignore  README.md
frontend/: package-lock.json
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/audio/: AudioAnalyzer.ts
frontend/src/components/: AssetSelector.tsx  AudioVisualizer.tsx  MetricsDisplay.tsx  PriceChart.tsx  StyleSelector.tsx
frontend/src/hooks/: useAudioStream.ts
frontend/src/visualizations/: FrequencyBars.ts  ParticleSystem.ts  WaveformRenderer.ts
oscillator/: Cargo.toml
oscillator/src/: lib.rs  main.rs  state.rs
oscillator/src/api/: mod.rs  rest.rs  websocket.rs
oscillator/src/data/: crypto.rs  indicators.rs  mod.rs  stocks.rs  streams.rs
oscillator/src/models/: market.rs  mod.rs  musical.rs
oscillator/src/music/: composer.rs  mapper.rs  mod.rs  styles.rs
scripts/: bootstrap.sh
