[package]
name = "oscillator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros", "ws"] }
bytes = "1.6"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
futures = "0.3"
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.9"
thiserror = "1.0"
tokio = { version = "1.38", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tunes = "0.5"
uuid = { version = "1.8", features = ["v4", "serde"] }
rand = "0.8"
once_cell = "1.19"
itertools = "0.13"
